--- a/index.html
+++ b/index.html
@@ -17,14 +17,6 @@
 
     <script src="http://ic.game.com/js/jquery.fullPage.min.js"></script>
 
-
-
-
-    <!--特效引用部分-->
-    <script src="http://ic.game.com/lib/eff/js/three.min.js"></script>
-    <script src="http://ic.game.com/lib/eff/js/projector.js"></script>
-    <script src="http://ic.game.com/lib/eff/js/canvas-renderer.js"></script>
-
 </head>
 
 <body style="font-family: 'PingFang SC';">
@@ -39,7 +31,7 @@
             <li><a href="#page8">白皮书</a></li>
             <li class="logo">
                 <a href="javascript:;" class="clearfix">
-                    <img src="http://ic.game.com/img/index_img/logo.png" height="60" width="68"/>
+                    <img src="http://ic.game.com/img/index_img/logo.png" height="58" width="80"/>
                 </a>
             </li>
             <li><a href="#page9">关于我们</a></li>
@@ -120,32 +112,32 @@
                 </div>
             </div>
             <a class="clearfix r1" href="#page3">
-                <img src="http://ic.game.com/img/index_img/p3/game.png" height="113" width="164"/>
+                <img src="http://ic.game.com/img/index_img/logo2/im.png" height="113" width="164"/>
                 <p>
                     Game.com全球唯一ID <br>
                     IM连接全球游戏玩家
                 </p>
             </a>
             <a class="clearfix r2" href="#page3">
-                <img src="http://ic.game.com/img/index_img/p3/cloud.png" height="112" width="149"/>
+                <img src="http://ic.game.com/img/index_img/logo2/trade.png" height="112" width="149"/>
                 <p>
                     虚拟币交易平台
                 </p>
             </a>
             <a class="clearfix r3" href="#page3">
-                <img src="http://ic.game.com/img/index_img/p3/trade.png" height="99" width="98"/>
+                <img src="http://ic.game.com/img/index_img/logo2/vc.png" height="99" width="98"/>
                 <p>
                     G资本投资
                 </p>
             </a>
             <a class="clearfix r4" href="#page3">
-                <img src="http://ic.game.com/img/index_img/p3/wallet.png" height="103" width="124"/>
+                <img src="http://ic.game.com/img/index_img/logo2/wallet.png" height="103" width="124"/>
                 <p>
                     Game.com钱包
                 </p>
             </a>
             <a class="clearfix r5" href="#page3">
-                <img src="http://ic.game.com/img/index_img/p3/platform.png" height="127" width="115"/>
+                <img src="http://ic.game.com/img/index_img/logo2/ico.png" height="127" width="115"/>
                 <p>
                     游戏ICO发行平台
                 </p>
@@ -270,18 +262,18 @@
 
         <div class="list clearfix">
             <div class="wallet des" id="icon_wallet">
-                <img src="http://ic.game.com/img/index_img/logo3/wallet.png" height="43" width="49"/>
+                <img src="http://ic.game.com/img/index_img/logo2/wallet.png" height="43" width="53"/>
             </div>
             <div class="ic" id="icon_ico">
-                <img src="http://ic.game.com/img/index_img/logo3/ico.png" height="45" width="40"/></div>
+                <img src="http://ic.game.com/img/index_img/logo2/ico.png" height="45" width="40"/></div>
             <div class="im" id="icon_im">
-                <img src="http://ic.game.com/img/index_img/logo3/im.png" height="36" width="62"/>
+                <img src="http://ic.game.com/img/index_img/logo2/im.png" height="48" width="62"/>
             </div>
             <div class="vc" id="icon_vc">
-                <img src="http://ic.game.com/img/index_img/logo3/vc.png" height="45" width="40"/>
+                <img src="http://ic.game.com/img/index_img/logo2/vc.png" height="45" width="40"/>
             </div>
             <div class="trade" id="icon_trade">
-                <img src="http://ic.game.com/img/index_img/logo3/trade.png" height="40" width="63"/>
+                <img src="http://ic.game.com/img/index_img/logo2/trade.png" height="47" width="63"/>
             </div>
         </div>
     </div>
@@ -591,7 +583,7 @@
             <ul class="clearfix">
                 <li>
                     <div class="i1">
-                        <img src="http://ic.game.com/img/whitepage/m1.png" height="252" width="192"/>
+                        <img src="http://ic.game.com/img/whitepage/m1.jpg" height="252" width="192"/>
                     </div>
                     <div class="i2">
                         Antonio Creighton
@@ -605,7 +597,7 @@
                 </li>
                 <li>
                     <div class="i1">
-                        <img src="http://ic.game.com/img/whitepage/m2.png" height="252" width="193"/>
+                        <img src="http://ic.game.com/img/whitepage/m2.jpg" height="252" width="193"/>
                     </div>
                     <div class="i2">
                         Mary Youmans
@@ -619,7 +611,7 @@
                 </li>
                 <li>
                     <div class="i1">
-                        <img src="http://ic.game.com/img/whitepage/m3.png" height="252" width="192"/>
+                        <img src="http://ic.game.com/img/whitepage/m3.jpg" height="252" width="192"/>
                     </div>
                     <div class="i2">
                         Mason Croftoon
@@ -633,7 +625,7 @@
                 </li>
                 <li>
                     <div class="i1">
-                        <img src="http://ic.game.com/img/whitepage/m4.png" height="252" width="192"/>
+                        <img src="http://ic.game.com/img/whitepage/m4.jpg" height="252" width="192"/>
                     </div>
                     <div class="i2">
                         Emily Larkins
@@ -820,6 +812,18 @@
 </div>
 
 
+
+
+
+<!--特效引用部分-->
+<script src="http://ic.game.com/lib/eff/js/three.min.js"></script>
+<script src="http://ic.game.com/lib/eff/js/projector.js"></script>
+<script src="http://ic.game.com/lib/eff/js/canvas-renderer.js"></script>
+
+
+
+
+
 <script src="http://ic.game.com/lib/eff/js/3d-lines-animation.js"></script>
 <script src="http://ic.game.com/lib/eff/js/color.js"></script>
 
@@ -830,24 +834,25 @@
         var only6 = 1;
         var only10 = 1;
         $.fn.fullpage({
-            anchors: ['page1', 'page2', 'page3', 'page4', 'page5', "page6", "page7", "page8", "page9", "page10", "page11","page12"],
-            navigation : true,
-            normalScrollElements : "#section11 .wa",
-            lpFlag : 0,
+            anchors: ['page1', 'page2', 'page3', 'page4', 'page5', "page6", "page7", "page8", "page9", "page10", "page11", "page12"],
+            navigation: true,
+            normalScrollElements: "#section11 .wa",
+            lpFlag: 0,
             afterLoad: function (anchorLink, index) {
                 if (index == 5) {
                     var $imgs = $(".tc img");
                     // 这里写滑动之后的特效
-                    if(only5) {
+                    if (only5) {
                         $imgs.each(function (index, item) {
                             item.style.bottom = -item.height + "px";
                             setTimeout(function () {
-                                $(item).animate({bottom:0},700)
-                            },index * 30)
+                                $(item).animate({bottom: 0}, 700)
+                            }, index * 30)
                         });
                         only5 = 0;
                     }
-                };
+                }
+
                 if (index == 6) {
                     var $wl = $(".wl");
                     var $st1 = $(".route .st1");
@@ -857,8 +862,8 @@
                     var $st5 = $(".route .st5");
                     var $st6 = $(".route .st6");
                     var $st7 = $(".route .st7");
-                    if(only6) {
-                        $wl.animate({width:"100%"},1500,"linear",function () {
+                    if (only6) {
+                        $wl.animate({width: "100%"}, 1500, "linear", function () {
                             $st1.fadeIn(300)
                                 .next().delay(500).fadeIn(300)
                                 .next().delay(1000).fadeIn(300)
@@ -869,41 +874,46 @@
                         });
                         only6 = 0;
                     }
-                };
+                }
+
                 if (index == 10) {
-                    if(only10) {
+                    if (only10) {
                         $("#section9 .t1").fadeIn(300)
                             .next().delay(500).fadeIn(300)
                             .next().delay(1000).fadeIn(300)
                             .next().delay(1500).fadeIn(300);
 
 
-
-
                         only10 = 0;
                     }
-                };
+                }
+
                 if (index == 12) {
                     $.fn.fullpage.lpFlag = 0;
-                    $("#section11").on("mousewheel", function() {
-                        if($("#section11 .container1 ").scrollTop() > 0) {
+                    $("#section11").on("mousewheel DOMMouseScroll", function (e) {
+                        if ((e.detail < 0 || e.originalEvent.deltaY < 0) && $("#section11 .container1 ").scrollTop() === 0) {
+                            location.href = "#page11";
+                        }
+                        if ($("#section11 .container1 ").scrollTop() > 0) {
                             $.fn.fullpage.lpFlag = 1;
                         }
-                        if($.fn.fullpage.lpFlag) {
-                            if($("#section11 .container1 ").scrollTop() === 0) {
+                        if ($.fn.fullpage.lpFlag) {
+                            if ($("#section11 .container1 ").scrollTop() === 0) {
                                 location.href = "#page11";
                             }
                         }
                     });
-                };
+                }
+
             },
             onLeave: function (index, direction) {
-                if( index == 12 ) {
+                if (index == 12) {
                     $.fn.fullpage.lpFlag = 0;
                 }
             }
         });
     });
+
 
 </script>
 <script src="http://ic.game.com/js/texiao.js"></script>
@@ -914,11 +924,18 @@
 <script>
     reset();
     window.onresize = reset;
+
     function reset() {
-        if($(window).height() < 721) {
+        var ch = $(window).height();
+        if (ch < 700) {
             $(".next").hide();
-        }else {
+        } else if (ch < 750) {
             $(".next").show();
+            $(".next").css({top: "92%"});
+        }
+        else {
+            $(".next").show();
+            $(".next").css({top: 750 * 0.92 + "px"});
         }
     }
 </script>
