完成倒计时0秒功能;完成高度的自适应;兼容ie;按钮优化;文件加上了版本号

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>Game.com</title>
-    <link rel="shortcut icon" href="http://ic.game.com/img/bitbug_favicon.ico" />
+    <link rel="shortcut icon" href="http://ic.game.com/img/bitbug_favicon.ico"/>
     <link rel="stylesheet" href="http://ic.game.com/lib/jquery.fullPage.css">
-    <link rel="stylesheet" href="http://ic.game.com/css/index.css">
+    <link rel="stylesheet" href="http://ic.game.com/css/index_20170831_1447.css">
     <link rel="stylesheet" href="http://ic.game.com/css/edit.css">
     <link rel="stylesheet" href="http://ic.game.com/lib/eff/css/canvasEff.css">
-
 
 
     <script src="http://ic.game.com/lib/jquery.min.js"></script>
@@ -108,7 +107,8 @@
                 <a class="clearfix r6" href="#">
                     <img src="http://ic.game.com/img/index_img/p3/center.png" height="170" width="170"/>
                 </a>
-                <div class="quanS"><img class="qS" src="http://ic.game.com/img/index_img/quanS.png" height="158" width="159"/>
+                <div class="quanS"><img class="qS" src="http://ic.game.com/img/index_img/quanS.png" height="158"
+                                        width="159"/>
                 </div>
             </div>
             <a class="clearfix r1" href="#page3">
@@ -295,7 +295,8 @@
             参与ico.game.com ICO项目所需的虚拟货币 参与trade.game.com 交易平台所需的虚拟货币
         </div>
         <div class="info2">
-            <img src="http://ic.game.com/img/whitepage/yellowDot.png" height="42" width="42"/>G资本的力量 加入早鸟计划 ICO 赠送全球唯一game.com
+            <img src="http://ic.game.com/img/whitepage/yellowDot.png" height="42" width="42"/>G资本的力量 加入早鸟计划 ICO
+            赠送全球唯一game.com
             ID<img src="http://ic.game.com/img/whitepage/yellowDot.png" height="42" width="42"/>
         </div>
         <div class="coin">
@@ -311,9 +312,6 @@
             <img class="b b7" src="http://ic.game.com/img/whitepage/bling/b7.png" height="10" width="10"/>
             <img class="b b8" src="http://ic.game.com/img/whitepage/bling/b8.png" height="20" width="20"/>
             <img class="b b9" src="http://ic.game.com/img/whitepage/bling/b9.png" height="20" width="20"/>
-
-
-
 
 
         </div>
@@ -360,11 +358,11 @@
             ICO 参与者可将 BTC、ETH 发送至官方网站公告的智能合同或钱包位置来进行认购 <br>
             使用 BTC 认购时，将会以当时 Bitfinex 的 ETH/BTC 现价，转换为对应的 ETH 数量来做认购
         </div>
-        <div class="next">
-            <a href="#page6">
-                <img src="http://ic.game.com/img/index_img/next.png" height="38" width="38"/>
-            </a>
-        </div>
+    </div>
+    <div class="next">
+        <a href="#page6">
+            <img src="http://ic.game.com/img/index_img/next.png" height="38" width="38"/>
+        </a>
     </div>
 </div>
 
@@ -510,7 +508,7 @@
                     第一阶段
                 </div>
                 <div class="info">
-                    2017 年 10 月 1 0日至 2017 年 10月 31 日进行 ICO，共发行 1亿枚 G币，价格为 1 枚以太币换 4000 枚 G币，目标筹集2.5万枚以太币。
+                    2017 年 10 月 10 日至 2017 年 10月 31 日进行 ICO，共发行 1 亿枚 G币，价格为 1 枚以太币换 4000 枚 G币，目标筹集 2.5 万枚以太币。
                 </div>
             </div>
             <div class="text clearfix t2">
@@ -518,7 +516,8 @@
                     第二阶段
                 </div>
                 <div class="info">
-                    2017 年 11 月 1 日至 2017 年 11月 31 日进行 ICO，首日价格为 1 枚以太币换 3000 枚 G币，30 天内随时间线性升值至 1 枚以太币可兑换 1500 枚G币。于此期间，共发行 1亿枚 G币。
+                    2017 年 11 月 1 日至 2017 年 11月 31 日进行 ICO，首日价格为 1 枚以太币换 3000 枚 G币，30 天内随时间线性升值至 1 枚以太币可兑换 1500
+                    枚G币。于此期间，共发行 1亿枚 G币。
                 </div>
             </div>
             <div class="text clearfix t3">
@@ -532,7 +531,9 @@
                 <div class="li">
                     <ul>
                         <li>若 1月 1 日有 1000 位竞标者各投入 1 枚以太币，总共收到 1000 枚以太币，则当日将由该 1000 位竞标者均分 100 万枚 G币。</li>
-                        <li>若 1月 2 日有 500 位竞标者各投入 0.5 枚以太币与 500 位竞标者各投入 1.5 枚以太币，平台总共收到 1000 枚以太币，则投入 0.5 枚以太币的 500 位竞标者均分 25 万枚 G币，投入 1.5 枚以太币的 500 位竞标者，均分 75 万枚 G币，以此类推。</li>
+                        <li>若 1月 2 日有 500 位竞标者各投入 0.5 枚以太币与 500 位竞标者各投入 1.5 枚以太币，平台总共收到 1000 枚以太币，则投入 0.5 枚以太币的 500
+                            位竞标者均分 25 万枚 G币，投入 1.5 枚以太币的 500 位竞标者，均分 75 万枚 G币，以此类推。
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -812,16 +813,10 @@
 </div>
 
 
-
-
-
 <!--特效引用部分-->
 <script src="http://ic.game.com/lib/eff/js/three.min.js"></script>
 <script src="http://ic.game.com/lib/eff/js/projector.js"></script>
 <script src="http://ic.game.com/lib/eff/js/canvas-renderer.js"></script>
-
-
-
 
 
 <script src="http://ic.game.com/lib/eff/js/3d-lines-animation.js"></script>
@@ -916,26 +911,64 @@
 
 
 </script>
-<script src="http://ic.game.com/js/texiao.js"></script>
-
-
+<script src="http://ic.game.com/js/texiao_20170831_1447.js"></script>
 
 
 <script>
     reset();
     window.onresize = reset;
-
     function reset() {
         var ch = $(window).height();
-        if (ch < 700) {
+        if (ch < 600) {
             $(".next").hide();
+            reset(600);
+        } else if (ch < 700) {
+            $(".next").hide();
+            reset(ch);
         } else if (ch < 750) {
             $(".next").show();
-            $(".next").css({top: "92%"});
+            $(".next").css({top: "93%"});
+
+            reset(700);
         }
         else {
             $(".next").show();
-            $(".next").css({top: 750 * 0.92 + "px"});
+            $(".next").css({top: 750 * 0.93 + "px"});
+
+            reset(700);
+        }
+        function reset(ch) {
+            // 第一页
+            $("#section0 .canvas-content  >p").css({"margin-top": (ch - 600) / 100 * 30 + "px"});
+            $("#section0 .buy").css({"margin-top": (ch - 600) / 100 * 24 + 30 + "px"});
+            // 第二页
+            $("#section1 .round").css({"top": (ch - 600) / 100 * 20 + 75 + "px"});
+            $("#section1 .p2-t").css({"top": (ch - 600) / 100 * 41 + 230 + "px"});
+            // 第三页
+            $("#section2 .w").css({"margin-top": -55 + ( ch - 600 ) / 100 * 55 + "px"});
+            // 第四页
+            $("#section3 .w").css({"margin-top": (ch - 600) / 100 * 20 - 40 + "px"});
+            // 第五页
+            $("#section4 .w").css({"margin-top": (ch - 600) / 100 * 50 - 70 + "px"});
+            // 第六页
+            $("#section5 .w").css({"margin-bottom": 30 - ( ch - 600 ) / 100 * 30 + "px"});
+            $("#section5 .route").css({"top": (ch - 600) / 100 * 60 + 300 + "px"});
+            // 第七页
+            $("#section6 .w").css({"margin-top": (ch - 600) / 100 * 40 - 75 + "px"});
+            // 第八页
+            $("#section7 .w").css({"margin-top": (ch - 600) / 100 * 45 + "px"});
+            // 第九页
+            $("#section8 .w").css({"margin-top": (ch - 600) / 100 * 50 - 50 + "px"});
+            $("#section8 .info1").css({"top": -(ch - 600) / 100 * 19 + 60 + "px"});
+            $("#section8 .info2").css({"top": -(ch - 600) / 100 * 17 + 90 + "px"});
+            // 第10页
+            $("#section9 .info").css({"top": (ch - 600) / 100 * 57 + 70 + "px"});
+            $("#section9 .info1").css({"top": (ch - 600) / 100 * 25 + "px"});
+            $("#section9 .info2").css({"top": (ch - 600) / 100 * 92 + 150 + "px"});
+            $("#section9 .info3").css({"top": (ch - 600) / 100 * 72 + 550 + "px"});
+            // 第11页
+            $("#section10 .info1").css({"top": (ch - 600) / 100 * 45 + 15 + "px"});
+            $("#section10 .info2").css({"top": (ch - 600) / 100 * 80 + 160 + "px"});
         }
     }
 </script>
