--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Game.com</title>
     <link rel="shortcut icon" href="https://ic.game.com/img/bitbug_favicon.ico"/>
     <link rel="stylesheet" href="https://ic.game.com/lib/jquery.fullPage.css">
-    <link rel="stylesheet" href="https://ic.game.com/css/index_20170901_1700.css">
+    <link rel="stylesheet" href="https://ic.game.com/css/index_20170911_1437.css">
     <link rel="stylesheet" href="https://ic.game.com/css/edit_20170901_1700.css">
     <link rel="stylesheet" href="https://ic.game.com/lib/eff/css/canvasEff.css">
 
@@ -950,7 +950,7 @@
         function reset(ch) {
             // 第一页
             $("#section0 .canvas-content  >p").css({"margin-top": (ch - 600) / 100 * 30 + "px"});
-            $("#section0 .buy").css({"margin-top": (ch - 600) / 100 * 24 + 30 + "x"});
+            $("#section0 .buy").css({"margin-top": (ch - 600) / 100 * 24 + 30 + "px"});
             // 第二页
             $("#section1 .round").css({"top": (ch - 600) / 100 * 20 + 75 + "px"});
             $("#section1 .p2-t").css({"top": (ch - 600) / 100 * 41 + 230 + "px"});
